--- a/styles/layout/index/_intro.scss
+++ b/styles/layout/index/_intro.scss
@@ -99,8 +99,8 @@
         border-radius: 50%;
         background: radial-gradient(rgba($color-0681CE, 1) 0%, rgba($color-0681CE, 0.9) 50%, rgba($color-00276D, 1) 100%);
 		filter: blur(20px);
-		will-change: animation;
-      	animation: fog 20s linear infinite;
+		will-change: transform;
+      	animation: fog-mobile 20s linear infinite;
 	  }
       &--1 {
         height: 40rem;
@@ -138,5 +138,13 @@
   100% {
     transform: translateX(-130%);
     aspect-ratio: 4/1;
+  }
+}
+@keyframes fog-mobile {
+  0% {
+    transform: translateX(120%);
+  }
+  100% {
+    transform: translateX(-130%);
   }
 }
