--- a/styles/components/modals/_modal-form.scss
+++ b/styles/components/modals/_modal-form.scss
@@ -33,7 +33,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 2rem;
-		padding: 2rem;
+		padding: 4rem 2rem;
 	}
 	&__closeBtn {
 		cursor: pointer;
