--- a/styles/components/modals/_modal-form.scss
+++ b/styles/components/modals/_modal-form.scss
@@ -33,7 +33,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 2rem;
-		padding: 4rem 2rem;
+		padding: 2rem;
 	}
 	&__closeBtn {
 		cursor: pointer;
@@ -104,6 +104,9 @@
 }
 @media (max-width: 475px) {
     .modal-form {
+		&__container {
+			padding-bottom: 6rem;
+		}
         &__title {
             font-size: 2rem;
             line-height: 2rem;
