--- a/styles/pages/about-page.scss
+++ b/styles/pages/about-page.scss
@@ -1,6 +1,6 @@
 @import "../utils/variables";
 @import "../utils/mixins";
-@import "../utils/leaflet";
+@import "../utils/swiper";
 
 @import "../base/reset";
 @import "../base/typography";
