--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -25,6 +25,7 @@ $size-256px: 16rem;
 // Colors
 $color-FFFFFF: #FFFFFF;
 $color-D6D0C6: #D6D0C6;
+$color-AAA8AC: #AAA8AC;
 $color-1D719D: #1D719D;
 $color-0B5DAA: #0B5DAA;
 $color-063968: #063968;
