--- a/styles/css/about-page.css
+++ b/styles/css/about-page.css
@@ -1767,6 +1767,9 @@ body {
   object-fit: cover;
 }
 
+.values {
+  padding: 4rem 0;
+}
 .values__container {
   max-width: 1440px;
   margin: 0 auto;
@@ -1807,4 +1810,472 @@ body {
 .values__desc {
   font-weight: 550;
   opacity: 0.5;
+}
+
+.docs__container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+.docs__title {
+  font-size: clamp(2rem, 3vw, 3rem);
+  line-height: clamp(2rem, 3vw, 3rem);
+  font-weight: 660;
+  margin-top: 2rem;
+}
+.docs__body {
+  margin-top: 4rem;
+}
+.docs__slide {
+  max-width: 17.5rem;
+  aspect-ratio: 1/1;
+  padding: 2rem 1rem;
+  border: 0.078125rem solid rgba(214, 208, 198, 0.5);
+  border-left: none;
+  border-right: none;
+  transition: 0.7s;
+}
+.docs__slide:hover {
+  translate: 0 -10%;
+}
+.docs__slide:hover .docs__slide-link {
+  max-height: 2rem;
+}
+.docs__slide-wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.docs__slide-title {
+  text-wrap: wrap;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  font-weight: 750;
+}
+.docs__slide-icon {
+  max-width: 3rem;
+  aspect-ratio: 1/1;
+}
+.docs__slide-link {
+  color: #AAA8AC;
+  font-size: 0.875rem;
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.7s;
+}
+.docs__footer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 2rem;
+}
+.docs__nav-icon {
+  cursor: pointer;
+  font-size: 0.75rem;
+  transition: 0.7s;
+}
+.docs__nav-icon--prev {
+  rotate: -130deg;
+}
+.docs__nav-icon--next {
+  rotate: 45deg;
+}
+.docs__nav-icon.disable {
+  opacity: 0.5;
+  scale: 0.8;
+}
+
+.about {
+  padding: 8rem 0;
+}
+.about__container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  position: relative;
+}
+.about__titlebox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0;
+  position: sticky;
+  top: 0;
+  z-index: -1;
+}
+.about__title {
+  font-size: clamp(3rem, 17vw, 14.5454545455rem);
+  line-height: clamp(3rem, 17vw, 14.5454545455rem);
+  text-transform: lowercase;
+  font-weight: 750;
+  text-wrap: nowrap;
+  margin-top: 3rem;
+}
+.about__item {
+  mix-blend-mode: difference;
+  display: flex;
+  gap: 2rem;
+  margin: 8rem 0;
+}
+.about__item--last-of-type {
+  mix-blend-mode: difference;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+.about__item--last-of-type > * {
+  width: 30%;
+}
+.about__item:nth-child(odd) {
+  justify-content: flex-end;
+}
+.about__item:nth-child(even) {
+  justify-content: flex-start;
+}
+.about__item > * {
+  width: 40%;
+}
+.about__item-tag {
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  font-weight: 750;
+}
+.about__item-text {
+  font-size: 0.875rem;
+  margin-top: 1rem;
+}
+.about__item-text--marked {
+  list-style: disc outside;
+  margin-left: 1rem;
+}
+.about__item-text--title {
+  width: 80%;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  font-weight: 660;
+  margin-bottom: 2rem;
+}
+
+.news__container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+.news__title {
+  font-size: clamp(2rem, 3vw, 3rem);
+  line-height: clamp(2rem, 3vw, 3rem);
+  font-weight: 660;
+  margin-top: 2rem;
+}
+.news__body {
+  margin-top: 4rem;
+}
+.news__slide {
+  max-width: 20rem;
+  aspect-ratio: 1/0.75;
+  padding: 2rem 1rem;
+}
+.news__slide:hover .news__slide-link {
+  opacity: 1;
+}
+.news__slide:hover .news__slide-link::before {
+  width: 100%;
+}
+.news__slide-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.news__slide-title {
+  text-transform: uppercase;
+  font-weight: 660;
+  font-size: 0.75rem;
+  color: #063968;
+}
+.news__slide-text {
+  text-wrap: wrap;
+  font-size: 0.875rem;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  opacity: 0.8;
+}
+.news__slide-link {
+  position: relative;
+  font-size: 0.8125rem;
+  font-weight: 550;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  opacity: 0.8;
+  transition: 0.7s;
+}
+.news__slide-link::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0.09375rem;
+  background-color: #FFFFFF;
+  transition: 0.7s;
+}
+.news__slide-icon {
+  rotate: 45deg;
+}
+.news__footer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 2rem;
+}
+.news__nav-icon {
+  cursor: pointer;
+  font-size: 0.75rem;
+  transition: 0.7s;
+}
+.news__nav-icon--prev {
+  rotate: -130deg;
+}
+.news__nav-icon--next {
+  rotate: 45deg;
+}
+.news__nav-icon.disable {
+  opacity: 0.5;
+  scale: 0.8;
+}
+
+.connection {
+  position: relative;
+  padding: 8rem 0;
+}
+.connection__container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.connection__title {
+  font-size: clamp(3rem, 13vw, 12.3076923077rem);
+  line-height: clamp(3rem, 13vw, 12.3076923077rem);
+  text-transform: lowercase;
+  font-weight: 750;
+  text-wrap: nowrap;
+  align-self: flex-start;
+}
+.connection__body {
+  max-width: 35.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  translate: 0 -50%;
+}
+.connection__subtitle {
+  text-wrap: wrap;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  font-weight: 660;
+}
+.connection__linksbox {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.connection__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 0.375rem;
+  overflow: hidden;
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  font-weight: 660;
+  height: fit-content;
+}
+.connection__link::before {
+  content: attr(data-hover-text);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFFFFF;
+  color: #020109;
+  pointer-events: none;
+  translate: 0 100%;
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
+}
+.connection__link:hover::before {
+  translate: 0 0;
+}
+.connection__button {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  display: block;
+  z-index: 0;
+  padding: 0.875rem 1.5rem;
+  border: 0.078125rem solid #FFFFFF;
+  background: none;
+  color: #FFFFFF;
+  font-size: 0.75rem;
+  line-height: 0.75rem;
+  text-transform: uppercase;
+  transition-duration: 0.7s;
+  font-weight: 660;
+}
+.connection__button--icon {
+  pointer-events: none;
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  scale: 0.7;
+}
+.connection__button::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0%;
+  right: 0%;
+  width: 1rem;
+  height: 1rem;
+  scale: 0;
+  border-radius: 50%;
+  background: #FFFFFF;
+  transition-duration: 0.6s;
+  animation-timing-function: ease-out;
+}
+.connection__button:hover::after, .connection__button:focus::after {
+  scale: 56;
+  background: #FFFFFF;
+}
+.connection__button:hover, .connection__button:focus {
+  color: #020109;
+  background: none;
+  border-color: #FFFFFF;
+}
+.connection__button--icon {
+  top: 0.1rem;
+  right: 0.1rem;
+}
+.connection__button:hover::after, .connection__button:focus::after {
+  scale: 80;
+}
+.connection__fog {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow-x: clip;
+  pointer-events: none;
+}
+.connection__fog-layer {
+  position: absolute;
+}
+.connection__fog-layer--1, .connection__fog-layer--2 {
+  width: 80%;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  background: radial-gradient(rgba(6, 129, 206, 0.7) 0%, #00276d 100%);
+  filter: blur(60px);
+  opacity: 0.3;
+  transform: translateZ(0);
+  will-change: transform;
+}
+.connection__fog-layer--1 {
+  height: 90%;
+  left: 30%;
+  top: 0%;
+}
+.connection__fog-layer--2 {
+  height: 70%;
+  left: 5%;
+  top: 10%;
+}
+
+@media (max-width: 1190px) {
+  .connection__container {
+    gap: 2rem;
+  }
+  .connection__body {
+    translate: 0 0;
+  }
+}
+@media (max-width: 768px) {
+  .biography__image-wrapper--interaction-layer-front {
+    rotate: 4deg;
+    translate: 0 0;
+  }
+  .biography__image-wrapper--interaction-layer-back {
+    rotate: -2deg;
+    opacity: 1;
+    translate: 0 0;
+  }
+  .biography__item, .biography__item--first-of-type {
+    flex-direction: column;
+    margin: 8rem 0;
+  }
+  .biography__item > *, .biography__item--first-of-type > * {
+    width: 100%;
+  }
+  .biography__timeline {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 2rem;
+  }
+  .biography__timeline-item {
+    max-width: 15rem;
+  }
+  .biography__team {
+    grid-template-columns: 1fr;
+    gap: 4rem;
+  }
+  .about__item, .about__item--last-of-type {
+    flex-direction: column;
+    margin: 8rem 0;
+  }
+  .about__item > *, .about__item--last-of-type > * {
+    width: 100%;
+  }
+  .connection__subtitle {
+    font-size: 1.25rem;
+    line-height: 1.25rem;
+  }
+}
+@media (max-width: 560px) {
+  .biography__timeline-item {
+    max-width: none;
+  }
+  .values__list {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .values__item:nth-child(odd) {
+    justify-self: flex-end;
+  }
 }
