--- a/styles/layout/index/_intro.scss
+++ b/styles/layout/index/_intro.scss
@@ -67,11 +67,12 @@
 		cursor: pointer;
 		@include card-effect(17rem, auto, 0.25rem, none);
 		aspect-ratio: 2/1.25;
+		min-height: fit-content;
 	}
 	&__video {
 		pointer-events: none;
 		width: 100%;
-		height: 100%;
+		height: 90%;
 		object-fit: cover;
 		&-desc {
 			pointer-events: none;
