--- a/styles/css/news-page.css
+++ b/styles/css/news-page.css
@@ -1561,507 +1561,207 @@ body {
     -webkit-mask-image: linear-gradient(to top, black 40%, transparent 100%);
   }
 }
-.biography__container {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 1rem;
+.news {
   position: relative;
-}
-.biography__titlebox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 0;
-  position: sticky;
-  top: 0;
-  z-index: -1;
-}
-.biography__title {
-  font-size: clamp(3rem, 17vw, 14.5454545455rem);
-  line-height: clamp(3rem, 17vw, 14.5454545455rem);
-  text-transform: lowercase;
-  font-weight: 750;
-  text-wrap: nowrap;
-  margin-top: 3rem;
-}
-.biography__tagsbox {
-  text-transform: uppercase;
-  font-size: 0.75rem;
-  line-height: normal;
-  font-weight: 660;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-.biography__photobox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  margin: 8rem 0;
-}
-.biography__photobox:hover .biography__image-wrapper--interaction-layer-front {
-  rotate: 4deg;
-  translate: 0 0;
-}
-.biography__photobox:hover .biography__image-wrapper--interaction-layer-back {
-  rotate: -2deg;
-  opacity: 1;
-  translate: 0 0;
-}
-.biography__image-wrapper--interaction {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  display: block;
-  width: 16.5rem;
-  height: 21.375rem;
-  background-color: #FFFFFF;
-  padding: 0.5rem;
-  padding-bottom: auto;
-  overflow: hidden;
-  min-height: fit-content;
-  transition: 0.7s;
-}
-.biography__image-wrapper--interaction-layer-front {
-  rotate: -4deg;
-  translate: -50% 0;
-}
-.biography__image-wrapper--interaction-layer-back {
-  height: fit-content;
-  rotate: 4deg;
-  translate: 50% 0;
-  opacity: 0;
-}
-.biography__image-wrapper--interaction-title, .biography__image-wrapper--interaction-desc {
-  color: #020109;
-  font-weight: 550;
-  line-height: normal;
-}
-.biography__image-wrapper--interaction-title {
-  font-size: 0.9375rem;
-  margin-top: 0.5rem;
-}
-.biography__image-wrapper--interaction-desc {
-  font-size: 0.75rem;
-  opacity: 0.5;
-}
-.biography__image--interaction {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.biography__item {
-  mix-blend-mode: difference;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-  margin: 8rem 0;
-}
-.biography__item--first-of-type {
-  mix-blend-mode: difference;
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-}
-.biography__item--first-of-type > * {
-  width: 30%;
-}
-.biography__item:nth-child(odd) {
-  justify-content: flex-end;
-}
-.biography__item:nth-child(even) {
-  justify-content: flex-start;
-}
-.biography__item > * {
-  width: 40%;
-}
-.biography__item-tag {
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  font-weight: 750;
-}
-.biography__item-text {
-  font-size: 0.875rem;
-  margin-top: 1rem;
-}
-.biography__item-text--marked {
-  list-style: disc outside;
-  margin-left: 1rem;
-}
-.biography__item-text--title {
-  width: 80%;
-  font-size: 2.5rem;
-  line-height: 2.5rem;
-  font-weight: 660;
-  margin-bottom: 2rem;
-}
-.biography__timeline {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 1rem;
-  mix-blend-mode: difference;
-}
-.biography__timeline-item {
-  font-size: 0.875rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 85%;
-  grid-column: 1/span 2;
-}
-.biography__timeline-item:last-child {
-  width: 100%;
-}
-.biography__timeline-item:nth-child(1) {
-  grid-column-start: 1;
-}
-.biography__timeline-item:nth-child(2) {
-  grid-column-start: 2;
-}
-.biography__timeline-item:nth-child(3) {
-  grid-column-start: 3;
-}
-.biography__timeline-item:nth-child(4) {
-  grid-column-start: 4;
-}
-.biography__timeline-item:nth-child(5) {
-  grid-column-start: 5;
-}
-.biography__timeline-item--number {
-  font-size: 2rem;
-  font-weight: 550;
-}
-.biography__team {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-  padding: 8rem 0;
-}
-.biography__team-titlebox {
-  mix-blend-mode: difference;
-}
-.biography__team-title {
-  font-size: 2.5rem;
-  line-height: 2.5rem;
-  font-weight: 660;
-}
-.biography__team-imagebox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.biography__team-image-wrapper {
-  display: block;
-  width: auto;
-  height: auto;
-  background-color: #FFFFFF;
-  padding: 0.5rem;
-  padding-bottom: 2rem;
-  overflow: hidden;
-  max-width: 34.375rem;
-  rotate: 2deg;
-}
-.biography__team-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.values {
   padding: 4rem 0;
+  background-color: #FFFFFF;
+  color: #020109;
 }
-.values__container {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 1rem;
-}
-.values__title {
-  font-size: clamp(2rem, 3vw, 3rem);
-  line-height: clamp(2rem, 3vw, 3rem);
-  font-weight: 660;
-  margin-top: 0;
-}
-.values__list {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-}
-.values__item {
-  max-width: 16rem;
-  font-size: 0.875rem;
-  text-align: center;
-  text-wrap: wrap;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  margin-top: 4rem;
-}
-.values__image {
-  max-width: 10rem;
-  filter: hue-rotate(-20deg) contrast(1.1) brightness(0.9) drop-shadow(0 0 32px rgba(11, 93, 170, 0.5));
-}
-.values__name {
-  text-transform: uppercase;
-  font-weight: 750;
-}
-.values__desc {
-  font-weight: 550;
-  opacity: 0.5;
-}
-
-.docs__container {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 1rem;
-}
-.docs__title {
-  font-size: clamp(2rem, 3vw, 3rem);
-  line-height: clamp(2rem, 3vw, 3rem);
-  font-weight: 660;
-  margin-top: 2rem;
-}
-.docs__body {
-  margin-top: 4rem;
-}
-.docs__slide {
-  max-width: 17.5rem;
-  aspect-ratio: 1/1;
-  padding: 2rem 1rem;
-  border: 0.078125rem solid rgba(214, 208, 198, 0.5);
-  border-left: none;
-  border-right: none;
-  transition: 0.7s;
-}
-.docs__slide:hover {
-  translate: 0 -10%;
-}
-.docs__slide:hover .docs__slide-link {
-  max-height: 2rem;
-}
-.docs__slide-wrapper {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-.docs__slide-title {
-  text-wrap: wrap;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  font-weight: 750;
-}
-.docs__slide-icon {
-  max-width: 3rem;
-  aspect-ratio: 1/1;
-}
-.docs__slide-link {
-  color: #AAA8AC;
-  font-size: 0.875rem;
-  max-height: 0;
-  overflow: hidden;
-  transition: 0.7s;
-}
-.docs__footer {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  padding: 2rem;
-}
-.docs__nav-icon {
-  cursor: pointer;
-  font-size: 0.75rem;
-  transition: 0.7s;
-}
-.docs__nav-icon--prev {
-  rotate: -130deg;
-}
-.docs__nav-icon--next {
-  rotate: 45deg;
-}
-.docs__nav-icon.disable {
-  opacity: 0.5;
-  scale: 0.8;
-}
-
-.about {
-  padding: 8rem 0;
-}
-.about__container {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 1rem;
-  position: relative;
-}
-.about__titlebox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 0;
-  position: sticky;
-  top: 0;
-  z-index: -1;
-}
-.about__title {
-  font-size: clamp(3rem, 17vw, 14.5454545455rem);
-  line-height: clamp(3rem, 17vw, 14.5454545455rem);
-  text-transform: lowercase;
-  font-weight: 750;
-  text-wrap: nowrap;
-  margin-top: 3rem;
-}
-.about__item {
-  mix-blend-mode: difference;
-  display: flex;
-  gap: 2rem;
-  margin: 8rem 0;
-}
-.about__item--last-of-type {
-  mix-blend-mode: difference;
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-}
-.about__item--last-of-type > * {
-  width: 30%;
-}
-.about__item:nth-child(odd) {
-  justify-content: flex-end;
-}
-.about__item:nth-child(even) {
-  justify-content: flex-start;
-}
-.about__item > * {
-  width: 40%;
-}
-.about__item-tag {
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  font-weight: 750;
-}
-.about__item-text {
-  font-size: 0.875rem;
-  margin-top: 1rem;
-}
-.about__item-text--marked {
-  list-style: disc outside;
-  margin-left: 1rem;
-}
-.about__item-text--title {
-  width: 80%;
-  font-size: 2.5rem;
-  line-height: 2.5rem;
-  font-weight: 660;
-  margin-bottom: 2rem;
-}
-
 .news__container {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 1rem;
 }
-.news__title {
-  font-size: clamp(2rem, 3vw, 3rem);
-  line-height: clamp(2rem, 3vw, 3rem);
-  font-weight: 660;
-  margin-top: 2rem;
-}
-.news__body {
-  margin-top: 4rem;
-}
-.news__slide {
-  max-width: 20rem;
-  aspect-ratio: 1/0.75;
-  padding: 2rem 1rem;
-}
-.news__slide:hover .news__slide-link {
-  opacity: 1;
-}
-.news__slide:hover .news__slide-link::before {
-  width: 100%;
-}
-.news__slide-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.news__slide-title {
-  text-transform: uppercase;
-  font-weight: 660;
-  font-size: 0.75rem;
-  color: #063968;
-}
-.news__slide-text {
-  text-wrap: wrap;
-  font-size: 0.875rem;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  line-clamp: 3;
-  -webkit-line-clamp: 3;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  opacity: 0.8;
-}
-.news__slide-link {
-  position: relative;
-  font-size: 0.8125rem;
-  font-weight: 550;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  opacity: 0.8;
-  transition: 0.7s;
-}
-.news__slide-link::before {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 0;
-  height: 0.09375rem;
-  background-color: #FFFFFF;
-  transition: 0.7s;
-}
-.news__slide-icon {
-  rotate: 45deg;
-}
-.news__footer {
-  width: 100%;
+.news__titlebox {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
-  padding: 2rem;
+  flex-direction: column;
 }
-.news__nav-icon {
+.news__title {
+  font-size: clamp(3rem, 30vw, 20.8rem);
+  line-height: clamp(3rem, 30vw, 20.8rem);
+  text-transform: lowercase;
+  font-weight: 750;
+}
+.news__tagsbox {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.news__tag {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 0.375rem;
+  overflow: hidden;
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
   cursor: pointer;
+  text-transform: uppercase;
   font-size: 0.75rem;
+  line-height: 0.75rem;
+  font-weight: 660;
+}
+.news__tag::before {
+  content: attr(data-hover-text);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #020109;
+  color: #FFFFFF;
+  pointer-events: none;
+  translate: 0 100%;
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
+}
+.news__tag:hover::before {
+  translate: 0 0;
+}
+.news__tag.active {
+  pointer-events: none;
+  border-bottom: #020109 solid 0.078125rem;
+}
+.news__list {
+  counter-reset: item-counter;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 4rem;
+}
+.news__item {
+  position: relative;
+  display: flex;
+  gap: 1rem;
+}
+.news__item::before {
+  counter-increment: item-counter;
+  content: "(0" counter(item-counter) ")";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 0.75rem;
+  font-weight: 550;
+}
+.news__image-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 35.18rem;
+  max-height: 26.25rem;
+  overflow: hidden;
+}
+.news__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.news__contentbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.news__item-tag {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 0.8125rem;
+  font-weight: 550;
+  opacity: 0.5;
+}
+.news__item-tag::before {
+  content: "";
+  display: block;
+  width: 0.5rem;
+  aspect-ratio: 1/1;
+  background-color: #020109;
+  border-radius: 50%;
+}
+.news__text {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-size: 0.8125rem;
+  font-weight: 550;
+  text-wrap: wrap;
+}
+.news__text-item {
+  opacity: 0.6;
+}
+.news__text-item--title {
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  font-weight: 750;
+  opacity: 1;
+}
+.news__link {
+  display: flex;
+  align-items: center;
+  font-size: 0.9375rem;
+  font-weight: 550;
+}
+.news__link:hover .news__link--icon {
+  translate: 50% 0;
+  scale: 1;
+}
+.news__link:hover .news__link--icon::before {
+  opacity: 1;
+}
+.news__link--icon {
+  font-size: 0.75rem;
+  rotate: 45deg;
+  color: #FFFFFF;
+  background-color: #020109;
+  border-radius: 50%;
+  padding: 0.5rem;
+  scale: 0.3;
   transition: 0.7s;
 }
-.news__nav-icon--prev {
-  rotate: -130deg;
+.news__link--icon::before {
+  opacity: 0;
+  transition: 0.7s;
 }
-.news__nav-icon--next {
-  rotate: 45deg;
+.news__fog {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  overflow-x: clip;
+  pointer-events: none;
 }
-.news__nav-icon.disable {
-  opacity: 0.5;
-  scale: 0.8;
+.news__fog-layer {
+  position: absolute;
+}
+.news__fog-layer--1, .news__fog-layer--2 {
+  border-radius: 50%;
+  background: linear-gradient(to bottom, white 0%, white 40%, #0681ce 70%, #00276d 100%);
+  filter: blur(25px);
+}
+.news__fog-layer--1 {
+  height: 20rem;
+  width: 100%;
+  left: -20%;
+  bottom: -10rem;
+}
+.news__fog-layer--2 {
+  height: 10rem;
+  width: 50%;
+  right: -10%;
+  bottom: -5rem;
 }
 
 .connection {
   position: relative;
-  padding: 8rem 0;
+  z-index: 0;
+  padding: 4rem 0;
 }
 .connection__container {
   max-width: 1440px;
@@ -2217,67 +1917,4 @@ body {
   height: 70%;
   left: 5%;
   top: 10%;
-}
-
-@media (max-width: 1190px) {
-  .connection__container {
-    gap: 2rem;
-  }
-  .connection__body {
-    translate: 0 0;
-  }
-}
-@media (max-width: 768px) {
-  .biography__image-wrapper--interaction-layer-front {
-    rotate: 4deg;
-    translate: 0 0;
-  }
-  .biography__image-wrapper--interaction-layer-back {
-    rotate: -2deg;
-    opacity: 1;
-    translate: 0 0;
-  }
-  .biography__item, .biography__item--first-of-type {
-    flex-direction: column;
-    margin: 8rem 0;
-  }
-  .biography__item > *, .biography__item--first-of-type > * {
-    width: 100%;
-  }
-  .biography__timeline {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 2rem;
-  }
-  .biography__timeline-item {
-    max-width: 15rem;
-  }
-  .biography__team {
-    grid-template-columns: 1fr;
-    gap: 4rem;
-  }
-  .about__item, .about__item--last-of-type {
-    flex-direction: column;
-    margin: 8rem 0;
-  }
-  .about__item > *, .about__item--last-of-type > * {
-    width: 100%;
-  }
-  .connection__subtitle {
-    font-size: 1.25rem;
-    line-height: 1.25rem;
-  }
-}
-@media (max-width: 560px) {
-  .biography__timeline-item {
-    max-width: none;
-  }
-  .values__list {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-  .values__item:nth-child(odd) {
-    justify-self: flex-end;
-  }
 }
