--- a/styles/css/about-page.css
+++ b/styles/css/about-page.css
@@ -1845,10 +1845,13 @@ body {
 }
 .docs__slide-wrapper {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  align-self: center;
+}
+.docs__slide-wrapper > * {
+  justify-self: center;
+  align-self: center;
 }
 .docs__slide-title {
   text-wrap: wrap;
@@ -1858,15 +1861,20 @@ body {
   font-weight: 750;
 }
 .docs__slide-icon {
-  max-width: 3rem;
-  aspect-ratio: 1/1;
+  font-size: 3rem;
 }
 .docs__slide-link {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
   color: #AAA8AC;
   font-size: 0.875rem;
   max-height: 0;
   overflow: hidden;
   transition: 0.7s;
+}
+.docs__slide-link i {
+  pointer-events: none;
 }
 .docs__footer {
   width: 100%;
@@ -2263,6 +2271,12 @@ body {
   }
   .about__item > *, .about__item--last-of-type > * {
     width: 100%;
+  }
+  .docs__slide:hover {
+    translate: 0 0;
+  }
+  .docs__slide-link {
+    max-height: 2rem;
   }
   .connection__subtitle {
     font-size: 1.25rem;
