--- a/styles/layout/news/_news.scss
+++ b/styles/layout/news/_news.scss
@@ -1,5 +1,5 @@
 .news {
-    position: relative;
+	position: relative;
 	padding: 4rem 0;
 	background-color: $color-FFFFFF;
 	color: $color-020109;
@@ -11,12 +11,14 @@
 		flex-direction: column;
 	}
 	&__title {
-		@include fs-text(30vw, calc($size-256px * 1.3));
+		@include fs-text(23vw, calc($size-256px * 1.3));
 	}
 	&__tagsbox {
 		width: 100%;
 		display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
+		gap: 2rem;
 	}
 	&__tag {
 		@include hover-replacement($color-FFFFFF, $color-020109);
@@ -32,8 +34,8 @@
 	}
 	&__list {
 		counter-reset: item-counter;
-        position: relative;
-        z-index: 1;
+		position: relative;
+		z-index: 1;
 		display: flex;
 		flex-direction: column;
 		gap: 2rem;
@@ -69,6 +71,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		gap: 1rem;
 	}
 	&__item-tag {
 		display: flex;
@@ -94,6 +97,12 @@
 		font-size: $size-13px;
 		font-weight: $fw-550;
 		text-wrap: wrap;
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+		line-clamp: 7;
+		-webkit-line-clamp: 7;
+		overflow: hidden;
+		text-overflow: ellipsis;
 		&-item {
 			opacity: 0.6;
 			&--title {
@@ -133,7 +142,7 @@
 			}
 		}
 	}
-    &__fog {
-        @include block-fog-border();
-    }
+	&__fog {
+		@include block-fog-border();
+	}
 }
