--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1607,14 +1607,14 @@ body {
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     pointer-events: none;
-    mask-image: linear-gradient(to bottom, black 40%, transparent 100%);
-    -webkit-mask-image: linear-gradient(to bottom, black 40%, transparent 100%);
+    mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
   }
   body::after {
     top: auto;
     bottom: 0;
-    mask-image: linear-gradient(to top, black 40%, transparent 100%);
-    -webkit-mask-image: linear-gradient(to top, black 40%, transparent 100%);
+    mask-image: linear-gradient(to top, black 50%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to top, black 50%, transparent 100%);
   }
 }
 .intro {
@@ -1777,7 +1777,7 @@ body {
   background: radial-gradient(#0681ce 0%, rgba(6, 129, 206, 0.9) 50%, #00276d 100%);
   filter: blur(20px);
   will-change: transform;
-  animation: fog-mobile 20s linear infinite;
+  animation: fog 20s linear infinite;
 }
 .intro__fog-layer--1 {
   height: 40rem;
