--- a/styles/layout/index/_intro.scss
+++ b/styles/layout/index/_intro.scss
@@ -101,7 +101,7 @@
         background: radial-gradient(rgba($color-0681CE, 1) 0%, rgba($color-0681CE, 0.9) 50%, rgba($color-00276D, 1) 100%);
 		filter: blur(20px);
 		will-change: transform;
-      	animation: fog-mobile 20s linear infinite;
+      	animation: fog 20s linear infinite;
 	  }
       &--1 {
         height: 40rem;
