--- a/styles/css/requisites-page.css
+++ b/styles/css/requisites-page.css
@@ -863,181 +863,68 @@ body {
     -webkit-mask-image: linear-gradient(to top, black 50%, transparent 100%);
   }
 }
-.contacts {
-  padding: 4rem 0 8rem 0;
-}
-.contacts__container {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 1rem;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-.contacts__title {
-  font-size: clamp(3rem, 20vw, 19.2rem);
-  line-height: clamp(3rem, 20vw, 19.2rem);
-  text-transform: lowercase;
-  font-weight: 750;
-  align-self: center;
-  position: sticky;
-  top: 2rem;
-}
-.contacts__body {
-  display: flex;
-  margin-top: 6rem;
-  mix-blend-mode: difference;
-}
-.contacts__infobox, .contacts__links {
-  display: flex;
-  flex-direction: column;
-  gap: 6rem;
-}
-.contacts__subtitle {
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  font-weight: 750;
-  width: 50%;
-}
-.contacts__schedule {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  font-size: 1.5rem;
-  font-weight: 550;
-}
-.contacts__schedule-item--title {
-  font-size: 0.875rem;
-  font-weight: normal;
-}
-.contacts__item {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.contacts__item-title {
-  font-size: 0.875rem;
-}
-.contacts__item-link {
-  position: relative;
-  text-wrap: nowrap;
-  font-size: 4rem;
-  line-height: 4rem;
-}
-.contacts__item-link::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 0.09375rem;
-  width: 0;
-  background-color: #FFFFFF;
-  transition: 0.7s;
-}
-.contacts__item-link:hover::before {
-  width: 100%;
-}
-.contacts__item-qr {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-.contacts__item-qr:hover .contacts__item-qr-image-wrapper {
-  opacity: 1;
-}
-.contacts__item-qr-image-wrapper {
-  position: absolute;
-  left: -40%;
-  pointer-events: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  opacity: 0;
-  transition: 0.7s;
-}
-.contacts__button {
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  display: block;
-  z-index: 0;
-  padding: 0.875rem 1.5rem;
-  border: 0.078125rem solid #FFFFFF;
-  background: none;
-  color: inherit;
-  font-size: 0.75rem;
-  line-height: 0.75rem;
-  text-transform: uppercase;
-  transition-duration: 0.7s;
+.requisites {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 17.5rem;
+  padding: 8rem 0;
+  text-wrap: wrap;
 }
-.contacts__button--icon {
-  pointer-events: none;
-  width: fit-content;
-  height: fit-content;
-  position: absolute;
-  scale: 0.7;
+.requisites__container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  max-width: 768px;
+  display: flex;
+  flex-direction: column;
+  gap: 8rem;
 }
-.contacts__button::after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 0%;
-  right: 0%;
-  width: 1rem;
-  height: 1rem;
-  scale: 0;
-  border-radius: 50%;
-  background: #FFFFFF;
-  transition-duration: 0.6s;
-  animation-timing-function: ease-out;
+.requisites__title {
+  font-size: clamp(2rem, 5vw, 4rem);
+  line-height: clamp(2rem, 5vw, 4rem);
+  text-transform: lowercase;
+  font-weight: 750;
+  text-transform: none;
+  font-weight: 660;
 }
-.contacts__button:hover::after, .contacts__button:focus::after {
-  scale: 56;
-  background: #FFFFFF;
+.requisites__itembox, .requisites__item, .requisites__hint {
+  display: flex;
+  flex-direction: column;
 }
-.contacts__button:hover, .contacts__button:focus {
-  color: #020109;
-  background: none;
-  border-color: #FFFFFF;
+.requisites__itembox {
+  gap: 4rem;
 }
-.contacts__button--icon {
-  top: 0.1rem;
-  right: 0.1rem;
+.requisites__item {
+  gap: 1rem;
 }
-
-@media (max-width: 1024px) {
-  .contacts__body {
-    flex-direction: column;
-    gap: 4rem;
-  }
-  .contacts__infobox {
-    flex-direction: row-reverse;
-    justify-content: space-between;
-  }
+.requisites__item--title {
+  color: #D6D0C6;
+  font-size: 1.125rem;
+  font-weight: 550;
 }
-@media (max-width: 768px) {
-  .contacts__subtitle {
-    width: 100%;
-  }
-  .contacts__infobox {
-    flex-direction: column;
-    gap: 2rem;
-  }
-  .contacts__item-link {
-    font-size: 3rem;
-    line-height: 3rem;
-  }
-  .contacts__item-qr-image-wrapper {
-    display: none;
-  }
+.requisites__item--text {
+  font-size: clamp(1.5rem, 2vw, 2.5rem);
+  line-height: clamp(1.5rem, 2vw, 2.5rem);
+  text-transform: lowercase;
+  font-weight: 750;
+  text-transform: none;
 }
-@media (max-width: 560px) {
-  .contacts__item-link {
-    font-size: 2rem;
-    line-height: 2rem;
-  }
+.requisites__hint {
+  gap: 2rem;
+}
+.requisites__hint-text {
+  font-size: 1.125rem;
+  color: #D6D0C6;
+}
+.requisites__hint-link {
+  text-decoration: underline;
+}
+.requisites__hint-qr-wrapper {
+  max-width: 25rem;
+  aspect-ratio: 1/1;
+}
+.requisites__hint-qr {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
